--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="icon"
       type="image"
-      href="scriptStory.png"
+      href="https://api.iconify.design/ri:javascript-fill.svg"
     />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
